# tritonserver-rs

./: .gitattributes  .gitmodules  BENCH.md  CHANGELOG.md  Cargo.toml  DEPLOY.md  Dockerfile.base  Dockerfile.dev  LICENCE  LICENSE  MODEL_CONFIGURATION.md  NOTICE  README.md  build.rs
examples/: Cargo.toml  Dockerfile  README.md  entrypoint.sh
examples/data/input/: audio_classes.csv  image_classes.csv
examples/models/: README.md
examples/models/audio_classification/: README.md
examples/models/audio_classification/yamnet/: config.pbtxt
examples/models/image_detection/: README.md
examples/models/image_detection/postprocess/1/: model.py
examples/models/image_detection/yolov8_onnx/: config.pbtxt
examples/models/mnist_generator/: README.md
examples/models/mnist_generator/generator/: config.pbtxt
examples/models/simple_model/adder/: config.pbtxt
examples/models/simple_model/adder/1/: model.py
examples/models/text_detection/: README.md
examples/models/text_detection/craft/: config.pbtxt
examples/src/: lib.rs
src/: allocator.rs  context.rs  error.rs  lib.rs  macros.rs  memory.rs  message.rs  metrics.rs  options.rs  parameter.rs  request.rs  response.rs  server.rs  trace.rs
src/request/: infer.rs  utils.rs
